tests/rosetta/out/Dart/anonymous-recursion-1.error
run error: exit status 254
../../tests/rosetta/out/Dart/anonymous-recursion-1.dart:29:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/anonymous-recursion-1.dart:18:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/anonymous-recursion-1.dart:12:9: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    b = t;
        ^
../../tests/rosetta/out/Dart/anonymous-recursion-1.dart:13:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/anonymous-recursion-1.dart:30:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/anonymous-recursion-1.dart:54:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/anonymous-recursion-1.dart:83:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/anonymous-recursion-1.dart:88:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/anonymous-recursion-1.dart:92:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
